# events-face-FastAPI

./: alembic.ini  docker-compose.test.yml  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 078334ee4ffb_update_sync_table.py  69b31edb91e6_create_registration_table.py  a74217c692b1_create_events_place_sync_log_tables.py
app/: main.py
app/api/: endpoints.py
app/core/: cache.py  config.py  database.py  handlers.py
app/modules/clients/: async_retry.py  events_face.py  events_paginator.py  retry_config.py
app/modules/events/: controller.py  dependencies.py  models.py  repository.py  schemas.py  service.py
app/modules/sync/: controller.py  dependencies.py  enums.py  models.py  repository.py  schemas.py  service.py
app/modules/tickets/: controller.py  dependencies.py  models.py  repository.py  schemas.py  service.py
app/workers/: sync_worker.py
tests/: conftest.py  factories.py
tests/modules/clients/: test_events_face.py
tests/modules/event-face/: test_events_repository.py  test_places_repository.py
tests/modules/sync/: test_sync_log_repository.py
