[project]
name = "events-face"
version = "0.1.0"
description = "Events Face FastAPI service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cachetools>=7.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "ruff>=0.15.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
lint = ["ruff"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
